--- a/templates/security_recruteur/registration.html.twig
+++ b/templates/security_recruteur/registration.html.twig
@@ -10,13 +10,17 @@
   {{ form_start(form) }}
         {{ form_row(form.nom,{'label':'Nom ','attr':{'placeholder':'Nom '}})}}
         {{ form_row(form.prenom,{'label':'prenom','attr':{'placeholder':'prenom '}})}}
-        {{ form_row(form.Type,) }}
-        {{ form_row(form.societe,{'label':'societe ','attr':{'placeholder':'societe ','id':'type'}})}}
+        {{ form_row(form.Type,{'id':'type'}) }}
+        {# {{ form_row(form.societe, {'label': 'societe' 'attr': {'placeholder': 'société'}}) }} #}
+
+        {{ form_row(form.societe,{'label':'societe', 'label_attr': {'style': 'display: none;','class': 'hide-label'},'attr':{'style': 'display: none;','placeholder':'société ','class': 'hide-input'}})}}
         {{ form_row(form.email,{'label':'Email','attr':{'placeholder':'Email'}})}}
         {{ form_row(form.password,{'label':'Mot de passe','attr':{'placeholder':'Mot de passe'}})}}
         {{ form_row(form.confirm_password,{'label':'Confirmation du mot de passe','attr':{'placeholder':'Confirme mot de passe'}})}}
 
     <button type="submit" class="btn btn-success">inscription</button>
   {{ form_end(form) }}
+
+
 </div>
 {% endblock %}
