changement entity User et son UserRepository avec le firewall

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+            <script src="{{asset('js/jquery-3.6.0.min.js')}}"></script>
+            <script src="{{asset('js/inscription_user.js')}}"></script>
         {% endblock %}
     </head>
     <body>
