--- a/public/css/style.css
+++ b/public/css/style.css
@@ -246,3 +246,57 @@ header{
     margin-left: 13px;
     text-decoration: underline;
 }
+/*---------------------------- Style login User ----------------------------------------*/
+#body_login_user{
+    background: #007bff;
+    background: linear-gradient(to right, #0062E6, #33AEFF);
+  }
+  
+  .btn-login {
+    font-size: 0.9rem;
+    letter-spacing: 0.05rem;
+    padding: 0.75rem 1rem;
+  }
+  
+  .btn-google {
+    color: white !important;
+    background-color: #ea4335;
+  }
+  
+  .btn-facebook {
+    color: white !important;
+    background-color: #3b5998;
+  }
+  .div_loginUser{
+    display: flex;
+    justify-content: center;
+  }
+
+/*-----------------------------------------------style inscription user --------------------------------------------------*/
+  
+  .card-img-left {
+    width: 45%;
+    /* Link to your background image using in the property below! */
+    background: scroll center url('https://source.unsplash.com/WEQbe2jBg40/414x512');
+    background-size: cover;
+  }
+  
+  .btn-login {
+    font-size: 0.9rem;
+    letter-spacing: 0.05rem;
+    padding: 0.75rem 1rem;
+  }
+  
+  .btn-google {
+    color: white !important;
+    background-color: #ea4335;
+  }
+  
+  .btn-facebook {
+    color: white !important;
+    background-color: #3b5998;
+  }
+  .div_registerUser{
+    display: flex;
+    justify-content: center;
+  }
