--- a/templates/recruteur/offre/create.html.twig
+++ b/templates/recruteur/offre/create.html.twig
@@ -24,7 +24,7 @@
     <form id="form_offre" action="{{ path('sauvegarder_app_offre') }}" method="post">
         <div class="form-group">
             <label for="titre">Titre de l'offre</label>
-            <input type="text" name="titre" class="form-control" id="titre" aria-describedby="titre" placeholder="Titre">
+            <input type="text" name="titre" class="form-control" id="titre" aria-describedby="titre" placeholder="Titre" {{ variables['id'] ? "value='" ~ variables.offre.getTitre() ~ "'" }}>
             <small id="titre" class="form-text text-muted">Intitulé de votre offre</small>
         </div>
         <div class="form-group">
