--- a/templates/recruteur/offre/create.html.twig
+++ b/templates/recruteur/offre/create.html.twig
@@ -24,7 +24,8 @@
     <form id="form_offre" action="{{ path('sauvegarder_app_offre') }}" method="post">
         <div class="form-group">
             <label for="titre">Titre de l'offre</label>
-            <input type="text" name="titre" class="form-control" id="titre" aria-describedby="titre" placeholder="Titre" {{ variables['id'] ? "value='" ~ variables.offre.getTitre() ~ "'" }}>
+            <input type="text" name="id" hidden class="form-control" id="id" aria-describedby="id" placeholder="id" {{ variables['id'] ? "value=" ~ variables.offre.getId()|e ~ " " }}>
+            <input type="text" name="titre" class="form-control" id="titre" aria-describedby="titre" placeholder="Titre" {{ variables['id'] ? "value=" ~ variables.offre.getTitre()|e ~ " " }}>
             <small id="titre" class="form-text text-muted">Intitulé de votre offre</small>
         </div>
         <div class="form-group">
@@ -36,28 +37,28 @@
             <label for="type">Type</label>
             <select class="form-control" id="type" name="type">
                 {% for type in variables['types'] %}
-                    <option value="{{ type.id }}">{{ type.nom }}</option>
+                    <option value="{{ type.id }}" {{ variables['id'] and type.id == variables.offre.getType() ? "selected" : ""}}>{{ type.nom }}</option>
                 {% endfor %}
             </select>
         </div>
         <div class="form-group">
             <label for="temps">Temps</label>
             <select class="form-control" id="temps" name="temps">
-                <option value="1">Temps partiel</option>
-                <option value="2">Temps plein</option>
+                <option value="1" {{ variables['id'] and variables.offre.getTemps() == 1 ? "selected" : "" }}>Temps partiel</option>
+                <option value="2" {{ variables['id'] and variables.offre.getTemps() == 2 ? "selected" : "" }}>Temps plein</option>
             </select>
         </div>
         <div class="form-group">
             <label for="detail">Détails</label>
-            <textarea class="form-control" id="detail" rows="3" name="detail"></textarea>
+            <textarea class="form-control" id="detail" rows="3" name="detail"> {{ variables['id'] ? variables.offre.getDetail()|e }}</textarea>
         </div>
         <div class="form-group">
             <label for="salaire_min">Salaire min</label>
-            <input type="number" name="salaire_min" class="form-control" id="salaire_min" aria-describedby="titre" placeholder="Salaire min">
+            <input type="number" name="salaire_min" class="form-control" id="salaire_min" aria-describedby="titre" placeholder="Salaire min" {{ variables['id'] ? "value=" ~ variables.offre.getSalaireMin()|e ~ " " }}>
         </div>
         <div class="form-group">
             <label for="salaire_max">Salaire max</label>
-            <input type="number" name="salaire_max" class="form-control" id="salaire_max" aria-describedby="titre" placeholder="Salaire max">
+            <input type="number" name="salaire_max" class="form-control" id="salaire_max" aria-describedby="titre" placeholder="Salaire max" {{ variables['id'] ? "value=" ~ variables.offre.getSalaireMax()|e ~ " " }}>
         </div>
 
         <button type="submit" class="btn btn-primary">Publier</button>
