--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <!--path('app_inscription_recruteur') dans RegistrationController-->
-                    <div class="item1"><a class="nav-link text-white" href="{{path('app_recruteur')}}">recruteur</a></div>
+                    <div class="item1"><a class="nav-link text-white" href="{{path('app_inscription_recruteur')}}">recruteur</a></div>
                     {# <div class="item1"><a class="nav-link text-white" href="">recruteur</a></div> #}
                 </div>
                 <div class="navItem2">
