--- a/templates/security_recruteur/registrationRecruteur.html.twig
+++ b/templates/security_recruteur/registrationRecruteur.html.twig
@@ -15,9 +15,9 @@
             <div class="navItem">
                 <div class="navItem2">
                     {# <div class="item2"><a href="{{path('app_login')}}"><button class="btnhead1 btn btn-light">se connecter</button></a></div> #}
-                    <div class="item2"><a href=""><button class="btnhead1 btn btn-light">se connecter</button></a></div>
+                    <div class="item2"><a href=""><button class="btnhead1 btn btn-light">Se connecter</button></a></div>
                     {# <div class="item2"><a href="{{path('app_inscription')}}"><button class="btnhead2 btn btn-light">s'inscrire</button></a></div> #}
-                    <div class="item2"><a href=""><button class="btnhead2 btn btn-light">s'inscrire</button></a></div>
+                    <div class="item2"><a href=""><button class="btnhead2 btn btn-light">S'inscrire</button></a></div>
                 </div>
             </div>
         </div>
@@ -44,12 +44,12 @@
               {{ form_row(form.password,{'label':'Mot de passe','attr':{'placeholder':'Mot de passe'}})}}
               {{ form_row(form.confirm_password,{'label':'Confirmation du mot de passe','attr':{'placeholder':'Confirme mot de passe'}})}}
             <div class="div_registerUser">
-              <button type="submit" class="btn-register btn btn-success">inscription</button>
+              <button type="submit" class="btn-register btn btn-success">S'inscrire</button>
             </div>
               {{ form_end(form) }} 
               <hr class="my-4">
               {# <a class="d-block text-center mt-2 small" href="{{path('app_loginRecruteur')}}">j'ai déjà un compte</a> #}
-              <a class="d-block text-center mt-2 small" href="{{path('app_connexion_user')}}">j'ai déjà un compte</a>
+              <a class="d-block text-center mt-2 small" href="{{path('app_connexion_recruteur')}}">J'ai déjà un compte</a>
             </div>
              
 
