--- a/templates/recruteur/offre/index.html.twig
+++ b/templates/recruteur/offre/index.html.twig
@@ -108,7 +108,7 @@
                 box.appendChild(el);
 
                 setTimeout(function() {
-                    el.remove();
+                    location.reload();
                 }, 5000); // 
 
             });
