--- a/templates/particulier/petit_boulot/create.html.twig
+++ b/templates/particulier/petit_boulot/create.html.twig
@@ -27,7 +27,7 @@
     }
 </style>
 <div id="div_form_petit_boulot">
-    <form id="form_petit_boulot" action="{{path('sauvegarder_petit_boulot')}}" method="post">
+    <form id="form_petit_boulot" action="{{path('sauvegarder_petit_boulot')}}" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label for="titre">Titre du job</label>
             <input type="text" name="id" hidden class="form-control" id="id" aria-describedby="id" placeholder="id" {{ variables['id'] is defined ? "value=" ~ variables.petit_boulot.getId()|e ~ " " }}>
@@ -63,6 +63,10 @@
             <input type="number" name="salaire" class="form-control" id="salaire" aria-describedby="titre" placeholder="Salaire" {{ variables['id'] is defined ? "value=" ~ variables.petit_boulot.getSalaire()|e ~ " " }}>
         </div>
 
+        {# <div class="form-group">
+            <label for="image">Image associée</label>
+            <input type="file" name="image" class="form-control" id="image" aria-describedby="titre" placeholder="Image">
+        </div> #}
         <button type="submit" class="btn btn-secondary">Proposer</button>
     </form>
 </div>
