--- a/templates/recruteur/ajax/liste_missions.html.twig
+++ b/templates/recruteur/ajax/liste_missions.html.twig
@@ -1,47 +1,22 @@
-{% if variables['id'] is not null %}
+{% if variables['id'] is not null and variables['liste_missions'] is not empty %}
     <div class="form-group" id="offres">
         {% for mission in variables['liste_missions'] %}
-            <div id="ajout_offre">
-                <label for="missions">Missions de l'offre</label>
+            <div id="ajout_mission" class="ajout">
+                <label for="missions">Missions</label>
                 {% if loop.first %}
-                    <span id="ajout" onclick="ajout_offre()">+</span>
+                    <span id="ajout" onclick="ajout_mission()">+</span>
                 {% endif %}
             </div>
-            <input type="text" name="missions[]" class="form-control" id="missions" aria-describedby="missions" placeholder="Missions">
+            <input type="text" name="missions[]" class="form-control" id="missions" aria-describedby="missions" placeholder="Missions" value="{{mission.nom}}">
         {% endfor %}
     </div>
 {% else %}
     <div class="form-group" id="offres">
-        <div id="ajout_offre">
-            <label for="missions">Missions de l'offre</label>
-            <span id="ajout" onclick="ajout_offre()">+</span>
+        <div id="ajout_mission" class="ajout">
+            <label for="missions">Missions</label>
+            <span id="ajout" onclick="ajout_mission()">+</span>
         </div>
         <input type="text" name="missions[]" class="form-control" id="missions" aria-describedby="missions" placeholder="Missions">
     </div>
 {% endif %}
 
-
-<script>
-    function ajout_offre() {
-        // Sélectionner l'élément parent
-        var offresDiv = document.getElementById("offres");
-
-        // Créer le div conteneur
-        var containerDiv = document.createElement("div");
-        containerDiv.className = "form-group";
-
-        // Créer l'input
-        var input = document.createElement("input");
-        input.type = "text";
-        input.name = "missions[]";
-        input.className = "form-control";
-        input.id = "missions";
-        input.placeholder = "Missions";
-
-        // Ajouter le label et l'input au div conteneur
-        containerDiv.appendChild(input);
-
-        // Insérer le div conteneur après l'élément avec l'id "offres"
-        offresDiv.parentNode.insertBefore(containerDiv, offresDiv.nextSibling);
-    }
-</script>
