--- a/templates/recruteur/offre/create.html.twig
+++ b/templates/recruteur/offre/create.html.twig
@@ -25,11 +25,12 @@
         font-size: 1.5rem;
         cursor: pointer;
     }
-    #ajout_offre{
+    .ajout{
         display: flex;
         justify-content: space-between;
         align-items: baseline;
     }
+
 
 </style>
 <div id="div_form_offre">
@@ -40,7 +41,8 @@
             <input type="text" name="titre" class="form-control" id="titre" aria-describedby="titre" placeholder="Titre" {{ variables['id'] is defined ? "value=" ~ variables.offre.getTitre()|e ~ " " }}>
             <small id="titre" class="form-text text-muted">Intitulé de votre offre</small>
         </div>
-        {{ variables['liste_missions'] }}
+        {{ variables['liste_missions']|raw }}
+        {{ variables['liste_competences']|raw }}
         <div class="form-group">
             <label for="date_fin">Date de fin</label>
             <input type="date" name="date_fin" class="form-control" id="date_fin" placeholder="Date de fin">
@@ -78,7 +80,7 @@
     </form>
 </div>
 <script>
-    function ajout_offre() {
+    function ajout_mission() {
         // Sélectionner l'élément parent
         var offresDiv = document.getElementById("offres");
 
@@ -99,6 +101,28 @@
 
         // Insérer le div conteneur après l'élément avec l'id "offres"
         offresDiv.parentNode.insertBefore(containerDiv, offresDiv.nextSibling);
+    }
+    function ajout_competence() {
+        // Sélectionner l'élément parent
+        var competencesDiv = document.getElementById("competences");
+
+        // Créer le div conteneur
+        var containerDiv = document.createElement("div");
+        containerDiv.className = "form-group";
+
+        // Créer l'input
+        var input = document.createElement("input");
+        input.type = "text";
+        input.name = "competences[]";
+        input.className = "form-control";
+        input.id = "competences";
+        input.placeholder = "Competences";
+
+        // Ajouter le label et l'input au div conteneur
+        containerDiv.appendChild(input);
+
+        // Insérer le div conteneur après l'élément avec l'id "competences"
+        competencesDiv.parentNode.insertBefore(containerDiv, competencesDiv.nextSibling);
     }
 </script>
 {% endblock %}
