recherche offre user ok

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -78,7 +78,7 @@
             <div class="btnRechercher">
                 <div class="btnRechercher">
                     {# <a href="{{path('app_index_offre')}}"><button class="lien btn btn-primary">Cliquez ici</button></a> #}
-                    <a href=""><button class="lien btn btn-primary">Cliquez ici</button></a>
+                    <a href="{{ path('offre_user') }}"><button class="lien btn btn-primary">Cliquez ici</button></a>
                 </div>
             </div>
         </div>
