--- a/templates/recruteur/ajax/detail_offre.html.twig
+++ b/templates/recruteur/ajax/detail_offre.html.twig
@@ -12,3 +12,4 @@
     {% endfor %}
     </ul>
 </div>
+    <a href ="{{path('postule_offre',{id:offre.id})}}"><button type="submit" class="btn btn-warning text-light">Postuler maintenant </button></a>
