--- a/templates/security_user/loginUser.html.twig
+++ b/templates/security_user/loginUser.html.twig
@@ -32,6 +32,10 @@
                 <div class="div_loginUser">
                   <button class="btn_login btn btn-primary" type="submit">connecter</button>
                 </div>
+                <hr>
+                <div>
+                  <a href="{{path('app_inscription_user')}}"><p> Je n'ai pas de compte</p></a>
+                </div>
             </form>
           </div>
         </div>
