--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,9 +1,41 @@
 <style>
     #navbar{
         padding-left: 1rem;
+        /* position: fixed;
+        width: 100%;
+        top: 0; */
+    }
+    .menu-recruteur{
+        display:flex;
+        flex-direction:row;
+        gap: 20px;
+        margin: 9px;
+        margin-right: 40px;
+    }
+    .menu-navbar-recruteur{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+       
+    }
+    .menu-navbar-recruteur h4{
+        margin: 0px;
+        margin-top: 4px;
+        text-decoration: none;
+        color: white;
+
+    }.menu-navbar-recruteur a{
+       text-decoration:none;
+
+    }
+    .sidebar{
+        margin: 0;
+        top: auto;
+        background-color: darkslategrey;
+        width: 15%;
     }
 </style>
-<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+{# <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -24,4 +56,21 @@
             </li>
         </ul>
     </div>
+</nav> #}
+<nav class="navbar navbar-expand-lg bg-dark" id="navbar" >
+    <div class="text-light menu-navbar-recruteur">
+        <div>
+             <a href="{{path('app_home_recruteur')}}"><h4>Espace Recruteur</h4></a>
+        </div>
+        <div class="menu-recruteur">
+            <div>message</div>
+            <div>notification</div>
+            <div>profil</div>
+        </div>
+    </div>
 </nav>
+<div class="sidebar">
+    <a href="">Acceiul</a>
+    <a href="">Liste de vos offres</a>
+    <a href="">Ajouter une offre</a>
+</div>
