ajout des nouveau modification sur espace recruteur

--- a/templates/recruteur/accueil.html.twig
+++ b/templates/recruteur/accueil.html.twig
@@ -9,7 +9,7 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <a href="{{ path('creer_app_offre') }}"><button class="btn btn-success">Créer une offre d'emploi</button></a>
-</div>
+{# <div class="example-wrapper">
+    <a href=""><button class="btn btn-success">Créer une offre d'emploi</button></a>
+</div> #}
 {% endblock %}
