--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -5,12 +5,15 @@
         width: 100%;
         top: 0; */
     }
-    .menu-recruteur{
-        display:flex;
-        flex-direction:row;
-        gap: 20px;
-        margin: 9px;
-        margin-right: 40px;
+    .menu-recruteur {
+        display: flex;
+        flex-direction: row;
+        gap: 55px;
+        margin: 10px;
+        margin-right: 55px;
+    }
+    #icon-menu-recruteur{
+        margin: 12px;
     }
     .menu-navbar-recruteur{
         width: 100%;
@@ -22,7 +25,7 @@
         margin: 0px;
         margin-top: 4px;
         text-decoration: none;
-        color: white;
+        color: #e99b18;
 
     }.menu-navbar-recruteur a{
        text-decoration:none;
@@ -33,6 +36,12 @@
         top: auto;
         background-color: darkslategrey;
         width: 15%;
+    }
+    .sidebar .menu-sidebar{
+    color: white;
+    }
+    .sidebar .menu-sidebar:hover{
+    color: #e99b18;
     }
 </style>
 {# <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
@@ -63,14 +72,14 @@
              <a href="{{path('app_home_recruteur')}}"><h4>Espace Recruteur</h4></a>
         </div>
         <div class="menu-recruteur">
-            <div>message</div>
-            <div>notification</div>
+            <div><i id="icon-menu-recruteur" class="fas fa-comment-alt"></i></div>
+            <div><i id="icon-menu-recruteur" class="fas fa-bell"></i></div>
             <div>profil</div>
         </div>
     </div>
 </nav>
 <div class="sidebar">
-    <a href="">Acceiul</a>
-    <a href="">Liste de vos offres</a>
-    <a href="">Ajouter une offre</a>
+    <a href="" class="menu-sidebar"><i class="fa fa-home"></i> Accueil</a>
+    <a href="{{ path('creer_app_offre') }}" class="menu-sidebar"><i class="fa fa-light fa-file-circle-plus"></i> créer offres</a>
+    <a href="" class="menu-sidebar"><i class="fa fa-list"></i> Liste offres</a>
 </div>
